k8s/k8s/umami/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  labels:
    app: umami
spec:
  type: ClusterIP
  selector:
    app: umami
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
