k8s/k8s/umami/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: umami-postgres-allow-umami-only
spec:
  podSelector:
    matchLabels:
      app: umami-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: umami
      ports:
        - protocol: TCP
        - port: 5432
